--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,9 @@ Maintainer: Ondrej Popelka <ondrej.popelka@keboola.com>
 Depends:
     RJDBC,
     rJava,
+    testthat,
+    keboola.sapi.r.client,
     methods
-Suggests:
-    testthat
-    keboola.sapi.r.client
 Description: A set of methods for working with Keboola backend databases.
 License: MIT + file LICENSE
 RoxygenNote: 5.0.1
