chore: improved ignore file and test reporters

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,10 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.RData
-^\.Rhistory
-^\.gitignore
-^\.git
-^\.Rproj\.user
+^\.RData$
+^\.Rhistory$
+^\.gitignore$
+^\.git$
+^\.Rproj\.user$
+^Dockerfile$
+^docker-compose\.yml$
+^\.travis\.yml
